[#436] Reduce height of scrolling window to prevent cutoff of elements

--- a/sites/akvo-flow-web/src/App.css
+++ b/sites/akvo-flow-web/src/App.css
@@ -98,7 +98,7 @@ button.btn-repeatable{
 }
 
 .fixed-container {
-    height: calc(100% - 130px);
+    height: calc(90% - 130px);
     min-height:0px;
     overflow-y: scroll;
     min-height: 0;
